# crewai

./: README.md
crewai_project/: README.md  pyproject.toml
crewai_project/src/crewai_project/: crew.py  main.py
